src/librustdoc/html/static/css/rustdoc.css
/* ... */
#settings-menu, #help-button {
	margin-left: 4px;
	outline: none;
}

#settings-menu > a, #help-button > button, #copy-path {
	padding: 5px;
	width: 33px;
	border: 1px solid var(--border-color);
	border-radius: 2px;
	cursor: pointer;
	line-height: 1.5;
}

#settings-menu > a, #help-button > button {
	padding: 5px;
	height: 100%;
	display: block;
	background-color: var(--button-background-color);
}

#copy-path {
	color: var(--copy-path-button-color);
}
#copy-path > img {
	filter: var(--copy-path-img-filter);
}
#copy-path:hover > img {
	filter: var(--copy-path-img-hover-filter);
}

@keyframes rotating {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}
#settings-menu.rotate > a img {
	animation: rotating 2s linear infinite;
}

.setting-line .radio-line input:checked {
	box-shadow: inset 0 0 0 3px var(--main-background-color);
	background-color: var(--settings-input-color);
}
.setting-line .radio-line input:focus {
	box-shadow: 0 0 1px 1px var(--settings-input-color);
}
/* In here we combine both `:focus` and `:checked` properties. */
.setting-line .radio-line input:checked:focus {
	box-shadow: inset 0 0 0 3px var(--main-background-color),
		0 0 2px 2px var(--settings-input-color);
}
.setting-line .radio-line input:hover {
	border-color: var(--settings-input-color) !important;
}
input:checked + .slider {
	background-color: var(--settings-input-color);
}

#help-button > button {
	text-align: center;
	/* Rare exception to specifying font sizes in rem. Since this is acting
	   as an icon, it's okay to specify their sizes in pixels. */
	font-size: 20px;
	padding-top: 2px;
}

#copy-path {
	height: 34px;
	background-color: var(--main-background-color);
	margin-left: 10px;
	padding: 0;
	padding-left: 2px;
	border: 0;
}

kbd {
	display: inline-block;
	padding: 3px 5px;
	font: 15px monospace;
	line-height: 10px;
	vertical-align: middle;
	border: solid 1px var(--border-color);
	border-radius: 3px;
	cursor: default;
}

ul.all-items > li {
	list-style: none;
}

details.dir-entry {
	padding-left: 4px;
}

details.dir-entry > summary::after {
	content: " ►";
	position: absolute;
	left: -15px;
	top: 0px;
	font-size: 80%;
	padding: 2px 0px;
	/* set width to cover gap between arrow and text */
	width: 25px;
}

details[open].dir-entry > summary::after {
	content: " ▼";
}

details.dir-entry > summary {
	margin: 0 0 0 13px;
	list-style: none;
	cursor: pointer;
	position: relative;
}

details.dir-entry div.folders, details.dir-entry div.files {
	padding-left: 23px;
}

details.dir-entry a {
	display: block;
}

/* We use CSS containment on the details elements because most sizeable elements
	of the page are contained in one of these. This also makes re-rendering
	faster on document changes (like closing and opening toggles).
	Unfortunately we can't yet specify contain: content or contain: strict
	because the [-]/[+] toggles extend past the boundaries of the <details>
	https://developer.mozilla.org/en-US/docs/Web/CSS/contain */
details.rustdoc-toggle {
	contain: layout;
}

/* The hideme class is used on summary tags that contain a span with
	placeholder text shown only when the toggle is closed. For instance,
	"Expand description" or "Show methods". */
details.rustdoc-toggle > summary.hideme {
	cursor: pointer;
}

details.rustdoc-toggle > summary {
	list-style: none;
}
details.rustdoc-toggle > summary::-webkit-details-marker,
details.rustdoc-toggle > summary::marker {
	display: none;
}

details.rustdoc-toggle > summary.hideme > span {
	margin-left: 9px;
}

details.rustdoc-toggle > summary::before {
	content: "";
	cursor: pointer;
	width: 16px;
	height: 16px;
	background-repeat: no-repeat;
	background-position: top left;
	display: inline-block;
	vertical-align: middle;
	opacity: .5;
}

details.rustdoc-toggle > summary.hideme > span,
.more-examples-toggle summary, .more-examples-toggle .hide-more {
	color: var(--toggles-color);
}

/* Screen readers see the text version at the end the line.
	Visual readers see the icon at the start of the line, but small and transparent. */
details.rustdoc-toggle > summary::after {
	content: "Expand";
	overflow: hidden;
	width: 0;
	height: 0;
	position: absolute;
}

details.rustdoc-toggle > summary.hideme::after {
	/* "hideme" toggles already have a description when they're contracted */
	content: "";
}

details.rustdoc-toggle > summary:focus::before,
details.rustdoc-toggle > summary:hover::before {
	opacity: 1;
}

details.rustdoc-toggle.top-doc > summary,
details.rustdoc-toggle.top-doc > summary::before,
details.rustdoc-toggle.non-exhaustive > summary,
details.rustdoc-toggle.non-exhaustive > summary::before {
	font-size: 1rem;
}

details.non-exhaustive {
	margin-bottom: 8px;
}

details.rustdoc-toggle > summary.hideme::before {
	position: relative;
}

details.rustdoc-toggle > summary:not(.hideme)::before {
	position: absolute;
	left: -24px;
	top: 4px;
}

.impl-items > details.rustdoc-toggle > summary:not(.hideme)::before {
	position: absolute;
	left: -24px;
}

/* When a "hideme" summary is open and the "Expand description" or "Show
	methods" text is hidden, we want the [-] toggle that remains to not
	affect the layout of the items to its right. To do that, we use
	absolute positioning. Note that we also set position: relative
	on the parent <details> to make this work properly. */
details.rustdoc-toggle[open] > summary.hideme {
	position: absolute;
}

details.rustdoc-toggle {
	position: relative;
}

details.rustdoc-toggle[open] > summary.hideme > span {
	display: none;
}

details.rustdoc-toggle[open] > summary::before,
details.rustdoc-toggle[open] > summary.hideme::before {
	background-image: /* AUTOREPLACE: */url("toggle-minus.svg");
}

details.rustdoc-toggle > summary::before {
	background-image: /* AUTOREPLACE: */url("toggle-plus.svg");
}
/* ... */

